# rag_langchain_v1

./: .gitignore  README.md  STRUCTURE.md  app.py  pyproject.toml
sample_docs/: sample_data.csv  sample_markdown.md  sample_text.txt
src/rag_lagchain_v1/: __init__.py  admin.py  agent.py  ingestion.py  ui.py  vectorstore.py
src/rag_lagchain_v1/core/: __init__.py  config.py
src/rag_lagchain_v1/routers/: __init__.py  content_analyzer.py  file_router.py
src/rag_lagchain_v1/services/: __init__.py  agent.py  ingestion.py  vectorstore.py
src/rag_lagchain_v1/ui/: __init__.py  admin_ui.py  main_ui.py
src/rag_lagchain_v1/utils/: __init__.py  file_processors.py
